# faaa_back

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
example/: agent_example.py  agent_functions.py  plan_examples.py  playground.py
src/faaa/: __init__.py  app.py  exception.py  prompt.py  test_app.py  util.py
src/faaa/core/: __init__.py  exception.py  llm.py  test_agent.py  test_app.py  test_llm.py  tool_schema.py
src/faaa/core/agent/: __init__.py  agent.py  schema.py
src/faaa/core/prompt/: __init__.py  code_summary.py  dynamic_plan.py  multi_language.py
src/faaa/core/tool/: __init__.py  schema.py  tool.py
src/faaa/decorator/: __init__.py  agent.py  test_agent.py
src/faaa/prompt/: prompt.py  tool_calling.py
src/faaa/provider/: __init__.py  base.py  openai.py  test_openai.py
